k8s/api-deployment-template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devdaze-api
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: devdaze-api
  template:
    metadata:
      labels:
        app: devdaze-api
    spec:
      containers:
      - name: devdaze-api
        image: dozy27/devdaze-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
      imagePullSecrets:
      - name: dockerhub-credentials
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devdaze-api
  annotations:
    kubernetes.io/ingress.global-static-ip-name: devdaze-api-ip
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: devdaze-api-cert
  labels:
    app: devdaze-api
spec:
  defaultBackend:
    service:
      name: devdaze-api-service
      port:
        number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: devdaze-api-service
  labels:
    app: devdaze-api
spec:
  type: NodePort
  selector:
    app: devdaze-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
