k8s/ui-deployment-template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-ui
spec:
  selector:
    matchLabels:
      app: resume-ui
  template:
    metadata:
      labels:
        app: resume-ui
    spec:
      containers:
      - name: resume-ui
        image: dozy27/resume-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerhub-credentials
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-ui
  annotations:
    kubernetes.io/ingress.global-static-ip-name: devdaze-ip
    kubernetes.io/ingress.class: "gce"
  labels:
    app: resume-ui
spec:
  defaultBackend:
    service:
      name: resume-ui-service
      port:
        number: 80
  
---
apiVersion: v1
kind: Service
metadata:
  name: resume-ui-service
  labels:
    app: resume-ui
spec:
  type: NodePort
  selector:
    app: resume-ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
